--- a/upps-rest-api/pom.xml
+++ b/upps-rest-api/pom.xml
@@ -65,6 +65,41 @@
                     <mainClass>extern.uppsTransportService.Main</mainClass>
                 </configuration>
             </plugin>
+            
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <configuration>
+                <archive>
+                  <manifest>
+                    <mainClass>extern.uppsTransportService.UPPS_REST_API_Main</mainClass>
+                  </manifest>
+                </archive>
+              </configuration>
+            </plugin>
+
+			<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+                <archive>
+                  <manifest>
+                    <mainClass>extern.uppsTransportService.UPPS_REST_API_Main</mainClass>
+                  </manifest>
+                </archive>
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+				</configuration>
+                <executions>
+                    <execution>
+                         <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                         <phase>package</phase> <!-- bind to the packaging phase -->
+                            <goals>
+                              <goal>single</goal>
+                            </goals>
+                    </execution>
+                 </executions>
+			</plugin>
         </plugins>
     </build>
 
