--- a/upps-rest-api/pom.xml
+++ b/upps-rest-api/pom.xml
@@ -36,6 +36,10 @@
             <version>4.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.glassfish.jersey.media</groupId>
+        	<artifactId>jersey-media-json-processing</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
